--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <!------------------------ Start of header in html-------------------------->
   <header>
+    <font color="Red">Hello welcome my friend!<br><br> Here is</font>
     <h1>My Resume</h1>
   </header>
   <!------------------------ End of header in html-------------------------->
