--- a/index.html
+++ b/index.html
@@ -122,11 +122,47 @@
 <!------------------------ End of html table-------------------------->
 
 <!------------------------ Start of html form------------------------->
-<!-- <h4>Registration form</h4>
+<h4>Registration form</h4>
 <form action="/action.php">
+  <label for="">Name:</label>
   <input type="text" placeholder="Enter your name">
   <br><br>
+  <label for="">Password:</label>
   <input type="password" placeholder="password">
+  <br><br>
+
+
+  <label for="">Gender:</label>
+  <label for="male">
+    <input type="radio" name="gender" value="male" id="male">Male
+  </label>
+  <label for="female">
+    <input type="radio" name="gender" value="female" id="female">Female
+  </label>
+  <label for="others">
+    <input type="radio" name="gender" value="others" id="others">Others
+  </label>
+  <br><br>
+
+
+  <label for="">Date of birth:</label>
+  <input type="date" id="dob">
+  <br><br>
+  <label for="">date and time:</label>
+  <input type="datetime-local" id="datetime">
+  <br><br>
+
+
+  <label for="">Address:</label>
+  <textarea name="address" rows="2" cols="20">Biratnagar</textarea>
+  <br><br>
+
+  <label for="">Color:</label>
+  <input type="color" id="color">
+  <br><br>
+
+  <label for="">Choose File:</label>
+  <input type="file" id="file" multiple>
   <br><br>
   
 <h5>Select your class</h5>
@@ -160,7 +196,23 @@
 <br><br>
 <br><br>
 
+<font color="red">Input attributes (size, read-only, disabled)</font> 
+<br><br>
+<mark>Additional input attributes (Min, max, multiple, and placeholder)</mark>
+<br><br>
+
+<label for="">FirstName:</label>
+  <input type="text" placeholder="Enter your firstname" minlength="2">
+  <br><br>
   
+<label for="">LastName:</label>
+  <input type="text" placeholder="Enter your lastname" maxlength="5">
+  <br><br>
+  
+  <label for="">Phone no:</label>
+  <input type="tel" placeholder=123-45-678 pattern="[0-9]{3} [0-9]{2}-[0-9]{3}">
+
+<br><br>
 Select your fav city
 <select name="City">
   <option value="Brt">Biratnagar</option>
@@ -171,16 +223,19 @@ Select your fav city
 <br><br>
 <textarea name="feedback" id="107" placeholder="Please provide feedback" rows="5"></textarea>
 <input type="submit" value="submit">
-</form> -->
+</form>
+<br><br>
 
 <!------------------------ Start of iframe tag(website inside website)-------------------------->
 <iframe width="560" height="315" src="https://www.youtube.com/embed/yRpLlJmRo2w?si=EBjl8OUEX4hVNMys" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <br><br>
 <br><br>
+<br><br>
 <iframe width="560" height="315" src="https://en.wikipedia.org/wiki/Nepal"></iframe>
 
 <!------------------------ End of iframe tag---------------------------------------------------->
-
+<br><br>
+<br><br>
 <!-------------------------------------Start of audio tag------------------------------------------>
 
 <audio controls>
@@ -189,20 +244,18 @@ Your browser does not support the audio element.
 </audio>
 <!-------------------------------------End of audio tag------------------------------------------>
 
-
-
-
 <!-----------------------------start of video section tag----------------------------------------->
-
 <video width="560" height="315">
   <source src="movie.mp4" type="video/mp4"/> 
   Your browser does not support the video tag.
 </video>
 <!-----------------------------End of video section tag----------------------------------------->
 
-
-
-
+<br>
+<font color="red">Inline elements said as horizontal elements</font>
+<br><br>
+<mark>Block elements said as vertical elements</mark>
+<br>
 
   </main>
 <!------------------------ End of main section in html-------------------------->
