Added comment in the html file

--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
     
 <!------------------------ End of html table-------------------------->
 
+
+
+
+
 <!------------------------ Start of html form------------------------->
 <h4>Registration form</h4>
 <form action="/action.php">
@@ -225,6 +229,9 @@ Select your fav city
 <input type="submit" value="submit">
 </form>
 <br><br>
+<!---------------------------------------End of html form----------------------------------------------->
+
+
 
 <!------------------------ Start of iframe tag(website inside website)-------------------------->
 <iframe width="560" height="315" src="https://www.youtube.com/embed/yRpLlJmRo2w?si=EBjl8OUEX4hVNMys" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -236,6 +243,10 @@ Select your fav city
 <!------------------------ End of iframe tag---------------------------------------------------->
 <br><br>
 <br><br>
+
+
+
+
 <!-------------------------------------Start of audio tag------------------------------------------>
 
 <audio controls>
@@ -244,12 +255,20 @@ Your browser does not support the audio element.
 </audio>
 <!-------------------------------------End of audio tag------------------------------------------>
 
+
+
+
+
 <!-----------------------------start of video section tag----------------------------------------->
 <video width="560" height="315">
   <source src="movie.mp4" type="video/mp4"/> 
   Your browser does not support the video tag.
 </video>
 <!-----------------------------End of video section tag----------------------------------------->
+
+
+
+
 
 <br>
 <font color="red">Inline elements said as horizontal elements</font>
@@ -259,6 +278,9 @@ Your browser does not support the audio element.
 
   </main>
 <!------------------------ End of main section in html-------------------------->
+
+
+
 
 
 <!------------------------ Start of footer in html-------------------------->
